# CoChucK

./: CMakeLists.txt  README.md
include/: Chuck.h  Shred.h  UGen.h  example.h  utils.h
src/: Chuck.cpp  Shred.cpp  UGen.cpp  main.cpp
